--- a/main/assets/css/mcs1.css
+++ b/main/assets/css/mcs1.css
@@ -1,3 +1,10 @@
+/*
+html,
+body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+*/
 #loading {
     width: 100%;
     height: 100%;
@@ -950,8 +957,10 @@ a {
 }
 
 .heropurple {
-    height: 400px; 
-    background-color: #8737FF /*#9400FF*/;
+    height: 400px;
+    background-color: #8737FF
+        /*#9400FF*/
+    ;
 }
 
 [data-scroll] {
