--- a/main/assets/css/mcs.css
+++ b/main/assets/css/mcs.css
@@ -151,9 +151,9 @@ background-size: 200px 300px;*/
     border-color: yellow;
 }*/
 .mybtn {
-	/*background-image: linear-gradient(to right, #ff0000 0%, #5f009b 100%);*/
     background-color: #08AEEA;
-    background-image: linear-gradient(90deg, #08AEEA 0%, #2AF598 100%);
+    background-image: linear-gradient(to right, #ff0000 0%, #5f009b 100%);
+    /*background-image: linear-gradient(90deg, #08AEEA 0%, #2AF598 100%);*/
 	border-radius: 40px;
     box-sizing: border-box;
 	color: #FF325E !important;
