--- a/main/assets/css/mcs.css
+++ b/main/assets/css/mcs.css
@@ -152,7 +152,7 @@ background-size: 200px 300px;*/
 }*/
 .mybtn {
     background-color: #08AEEA;
-    background-image: linear-gradient(to right, #ff0000 0%, #5f009b 100%);
+    background-image: linear-gradient(to right, #ff0000 0%,  #5A50F5 /*#5f009b*/ 100%);
     /*background-image: linear-gradient(90deg, #08AEEA 0%, #2AF598 100%);*/
 	border-radius: 40px;
     box-sizing: border-box;
