--- a/main/assets/css/mcs1.css
+++ b/main/assets/css/mcs1.css
@@ -5,6 +5,13 @@ body {
     overflow-x: hidden;
 }
 */
+
+.content,
+.scrollContent {
+    max-width: 100%;
+    overflow: hidden;
+}
+
 #loading {
     width: 100%;
     height: 100%;
@@ -959,8 +966,8 @@ a {
 .heropurple {
     height: 400px;
     background-color: #5A50F5;
-        /*#8737FF*/
-        /*#9400FF*/
+    /*#8737FF*/
+    /*#9400FF*/
     ;
 }
 
@@ -1029,7 +1036,9 @@ a {
 }
 
 .boldbtn {
-    background: #5A50F5 /*#D93D6E*/;
+    background: #5A50F5
+        /*#D93D6E*/
+    ;
     border-radius: 50px;
     color: white !important;
 }
