--- a/main/assets/css/mcs1.css
+++ b/main/assets/css/mcs1.css
@@ -965,6 +965,10 @@ a {
 
 .heropurple {
     height: 400px;
+    background-image: url(../img/Layer0.png);
+    background-position: center; /* Center the image */
+    background-repeat: no-repeat; /* Do not repeat the image */
+    background-size: cover; /* Resize the background image to cover the entire container */
     background-color: #5A50F5;
     /*#8737FF*/
     /*#9400FF*/
