--- a/main/assets/css/mcs1.css
+++ b/main/assets/css/mcs1.css
@@ -965,14 +965,26 @@ a {
 
 .heropurple {
     height: 400px;
+    background-color: var(--color-bg) /*#5A50F5*/;
+    /*#8737FF*/
+    /*#9400FF*/
+    ;
+}
+
+.heropurple:before {
+    content: ' ';
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 400px;
+    z-index: 0;
+    opacity: 0.35;
     background-image: url(../img/Layer0.png);
     background-position: center; /* Center the image */
     background-repeat: no-repeat; /* Do not repeat the image */
     background-size: cover; /* Resize the background image to cover the entire container */
-    background-color: #5A50F5;
-    /*#8737FF*/
-    /*#9400FF*/
-    ;
 }
 
 .purple-bg {
